Translate 07_1_09.md via GitLocalize

--- a/de/07_1_09.md
+++ b/de/07_1_09.md
@@ -33,7 +33,7 @@ girls:
 2. Où est ta nouvelle voiture ? - Là-bas.
 3. Est-ce votre bibliothèque ?
 
-## Exercices 2
+## Übungen 222222
 
 - Quel âge ont-ils?
 - Wie alt bist du?
